# wishlist-rs

./: .gitignore  Cargo.toml  README.md  Rocket.template.toml  Rocket.toml
migrations/postgres/: 20231025020310_create_lists.down.sql  20231025020310_create_lists.sql  20231025020310_create_lists.up.sql  20231025162342_create_items.sql  20231029071754_add_timestamps.down.sql  20231029071754_add_timestamps.up.sql  20231029104705_add_users.down.sql  20231029104705_add_users.up.sql
migrations/sqlite/: 20231025020310_create_lists.sql  20231025020310_create_lists.up.sql  20231025162342_create_items.down.sql  20231025162342_create_items.sql  20231025162342_create_items.up.sql  20231029071754_add_timestamps.down.sql  20231029071754_add_timestamps.up.sql  20231029104705_add_users.up.sql
src/: main.rs  util.rs
src/api/: mod.rs
src/api/v1/: lists.rs
src/db/: mod.rs
src/db/models/: image.rs  item.rs  list.rs  mod.rs  user.rs  user_session.rs
src/web/: account.rs  auth.rs  items.rs  lists.rs  mod.rs
templates/: index.html.hbs
templates/account/: login.html.hbs  register.html.hbs
templates/error/: 500.html.hbs
templates/imports/: main.html.hbs
templates/items/: edit.html.hbs  index.html.hbs  new.html.hbs  show.html.hbs
templates/lists/: edit.html.hbs  index.html.hbs  new.html.hbs  show.html.hbs
