[package]
name = "wishlist-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
bcrypt = "0.15.0"
chrono = { version = "0.4.31", features = ["serde"] }
getrandom = "0.2.10"
rand = "0.8.5"
rocket = { version = "=0.5.0-rc.3", features = ["json", "secrets"] }
rocket_db_pools = { version = "=0.1.0-rc.3", features = ["sqlx_sqlite"] }
rocket_dyn_templates = { version = "=0.1.0-rc.3", features = ["handlebars"] }
thiserror = "1.0.50"
validator = { version = "0.16", features = ["derive"] }

[dependencies.sqlx]
version = "0.6"
default-features = false
features = ["any", "sqlite", "postgres", "macros", "migrate", "chrono"]
